# SOFIA

./: .gitignore  CMakeLists.txt  README.md
include/: advection.h  axis.h  cgs.h  diffusion.h  evolutor.h  grid.h  losses.h  output.h  params.h  particle.h  pid.h  sources.h  tridiag.h  utils.h  waves.h
src/: advection.cpp  axis.cpp  diffusion.cpp  evolutor.cpp  losses.cpp  main.cpp  output.cpp  params.cpp  particle.cpp  sources.cpp  tridiag.cpp  utils.cpp  waves.cpp
